tests/suite/snapshots/suite__case_7z25.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: Break
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 5
    line: 1
    column: 0
- token: Indent
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 5
    line: 1
    column: 0
- token: Scalar
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 12
    line: 1
    column: 7
- token: Break
  start:
    index: 12
    line: 1
    column: 7
  end:
    index: 14
    line: 2
    column: 0
- token: DocumentEnd
  start:
    index: 14
    line: 2
    column: 0
  end:
    index: 17
    line: 2
    column: 3
- token: Break
  start:
    index: 17
    line: 2
    column: 3
  end:
    index: 19
    line: 3
    column: 0
- token: Indent
  start:
    index: 19
    line: 3
    column: 0
  end:
    index: 19
    line: 3
    column: 0
- token: Scalar
  start:
    index: 19
    line: 3
    column: 0
  end:
    index: 22
    line: 3
    column: 3
- token: MappingValue
  start:
    index: 22
    line: 3
    column: 3
  end:
    index: 23
    line: 3
    column: 4
- token: Separator
  start:
    index: 23
    line: 3
    column: 4
  end:
    index: 24
    line: 3
    column: 5
- token: Scalar
  start:
    index: 24
    line: 3
    column: 5
  end:
    index: 29
    line: 3
    column: 10
- token: Break
  start:
    index: 29
    line: 3
    column: 10
  end:
    index: 31
    line: 4
    column: 0

