tests/suite/snapshots/suite__case_82an.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 8
    line: 0
    column: 8
- token: ScalarSpace
  start:
    index: 8
    line: 0
    column: 8
  end:
    index: 10
    line: 1
    column: 0
- token: Indent
  start:
    index: 10
    line: 1
    column: 0
  end:
    index: 10
    line: 1
    column: 0
- token: Scalar
  start:
    index: 10
    line: 1
    column: 0
  end:
    index: 15
    line: 1
    column: 5
- token: Break
  start:
    index: 15
    line: 1
    column: 5
  end:
    index: 17
    line: 2
    column: 0

