tests/suite/snapshots/suite__case_87e4.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: SingleQuote
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: SingleQuoted
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 19
- token: SingleQuote
  start:
    line: 0
    column: 19
  end:
    line: 0
    column: 20
- token: Separator
  start:
    line: 0
    column: 20
  end:
    line: 0
    column: 21
- token: MappingValue
  start:
    line: 0
    column: 21
  end:
    line: 0
    column: 22
- token: Separator
  start:
    line: 0
    column: 22
  end:
    line: 0
    column: 23
- token: SequenceStart
  start:
    line: 0
    column: 23
  end:
    line: 0
    column: 24
- token: Break
  start:
    line: 0
    column: 24
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Separator
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: SingleQuote
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: SingleQuoted
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 20
- token: SingleQuote
  start:
    line: 1
    column: 20
  end:
    line: 1
    column: 21
- token: Separator
  start:
    line: 1
    column: 21
  end:
    line: 1
    column: 22
- token: MappingValue
  start:
    line: 1
    column: 22
  end:
    line: 1
    column: 23
- token: Separator
  start:
    line: 1
    column: 23
  end:
    line: 1
    column: 24
- token: Scalar
  start:
    line: 1
    column: 24
  end:
    line: 1
    column: 29
- token: CollectionEntry
  start:
    line: 1
    column: 29
  end:
    line: 1
    column: 30
- token: Break
  start:
    line: 1
    column: 30
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: SequenceEnd
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: Break
  start:
    line: 2
    column: 2
  end:
    line: 3
    column: 0

