tests/suite/snapshots/suite__case_8cwc.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 26
- token: MappingValue
  start:
    line: 1
    column: 26
  end:
    line: 1
    column: 27
- token: Separator
  start:
    line: 1
    column: 27
  end:
    line: 1
    column: 28
- token: Scalar
  start:
    line: 1
    column: 28
  end:
    line: 1
    column: 33
- token: Break
  start:
    line: 1
    column: 33
  end:
    line: 2
    column: 0

