tests/suite/snapshots/suite__case_8g76.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Separator
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 2
- token: Comment
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 3
- token: CommentText
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 11
- token: Break
  start:
    line: 0
    column: 11
  end:
    line: 1
    column: 0
- token: Separator
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 3
- token: Break
  start:
    line: 1
    column: 3
  end:
    line: 4
    column: 0

