tests/suite/snapshots/suite__case_8kb6.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: SequenceEntry
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Separator
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: MappingStart
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: Separator
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
- token: Scalar
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 15
- token: Empty
  start:
    line: 1
    column: 15
  end:
    line: 1
    column: 15
- token: CollectionEntry
  start:
    line: 1
    column: 15
  end:
    line: 1
    column: 16
- token: Separator
  start:
    line: 1
    column: 16
  end:
    line: 1
    column: 17
- token: Scalar
  start:
    line: 1
    column: 17
  end:
    line: 1
    column: 18
- token: MappingValue
  start:
    line: 1
    column: 18
  end:
    line: 1
    column: 19
- token: Separator
  start:
    line: 1
    column: 19
  end:
    line: 1
    column: 20
- token: Scalar
  start:
    line: 1
    column: 20
  end:
    line: 1
    column: 21
- token: MappingEnd
  start:
    line: 1
    column: 21
  end:
    line: 1
    column: 22
- token: Break
  start:
    line: 1
    column: 22
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: SequenceEntry
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Separator
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: MappingStart
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: Separator
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 4
- token: Scalar
  start:
    line: 2
    column: 4
  end:
    line: 2
    column: 9
- token: ScalarSpace
  start:
    line: 2
    column: 9
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: Separator
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 2
- token: Scalar
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 6
- token: Empty
  start:
    line: 3
    column: 6
  end:
    line: 3
    column: 6
- token: CollectionEntry
  start:
    line: 3
    column: 6
  end:
    line: 3
    column: 7
- token: Separator
  start:
    line: 3
    column: 7
  end:
    line: 3
    column: 8
- token: Scalar
  start:
    line: 3
    column: 8
  end:
    line: 3
    column: 9
- token: MappingValue
  start:
    line: 3
    column: 9
  end:
    line: 3
    column: 10
- token: Separator
  start:
    line: 3
    column: 10
  end:
    line: 3
    column: 11
- token: Scalar
  start:
    line: 3
    column: 11
  end:
    line: 3
    column: 12
- token: MappingEnd
  start:
    line: 3
    column: 12
  end:
    line: 3
    column: 13
- token: Break
  start:
    line: 3
    column: 13
  end:
    line: 4
    column: 0

